--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,52 @@
 {
-  "name": "CoffeeTeam Pro",
+  "name": "CoffeeTeam Pro - מערכת תפעול צוותים",
   "short_name": "CoffeeTeam",
-  "description": "מערכת תפעול צוותים לבתי קפה - תיאום הזמנות בזמן אמת",
+  "description": "מערכת תפעול צוותים מקצועית לבתי קפה",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait",
   "background_color": "#fef3c7",
   "theme_color": "#d97706",
+  "orientation": "portrait-primary",
+  "scope": "/",
   "lang": "he",
   "dir": "rtl",
+  "categories": ["business", "productivity", "food"],
   "icons": [
-    {"src": "assets/icons/icon-72.png", "sizes": "72x72", "type": "image/png"},
-    {"src": "assets/icons/icon-96.png", "sizes": "96x96", "type": "image/png"},
-    {"src": "assets/icons/icon-128.png", "sizes": "128x128", "type": "image/png"},
-    {"src": "assets/icons/icon-144.png", "sizes": "144x144", "type": "image/png"},
-    {"src": "assets/icons/icon-152.png", "sizes": "152x152", "type": "image/png"},
-    {"src": "assets/icons/icon-192.png", "sizes": "192x192", "type": "image/png"},
-    {"src": "assets/icons/icon-384.png", "sizes": "384x384", "type": "image/png"},
-    {"src": "assets/icons/icon-512.png", "sizes": "512x512", "type": "image/png"}
+    {
+      "src": "assets/icons/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    }
   ],
+  "screenshots": [],
   "shortcuts": [
-    {"name": "קופאי", "short_name": "קופאי", "url": "/", "icons": [{"src": "assets/icons/cashier.png"}]},
-    {"name": "בריסטה", "short_name": "בריסטה", "url": "/", "icons": [{"src": "assets/icons/barista.png"}]},
-    {"name": "מנהל", "short_name": "מנהל", "url": "/", "icons": [{"src": "assets/icons/manager.png"}]}
-  ]
+    {
+      "name": "קופאי",
+      "short_name": "קופאי",
+      "description": "פתח כקופאי",
+      "url": "/?role=cashier",
+      "icons": []
+    },
+    {
+      "name": "בריסטה",
+      "short_name": "בריסטה",
+      "description": "פתח כבריסטה",
+      "url": "/?role=barista",
+      "icons": []
+    },
+    {
+      "name": "מנהל",
+      "short_name": "מנהל",
+      "description": "פתח כמנהל",
+      "url": "/?role=manager",
+      "icons": []
+    }
+  ],
+  "related_applications": [],
+  "prefer_related_applications": false,
+  "display_override": ["window-controls-overlay", "standalone"],
+  "launch_handler": {
+    "client_mode": "focus-existing"
+  }
 }
